fix pending changes in chrome and spacing

--- a/_sass/1-base/forms.scss
+++ b/_sass/1-base/forms.scss
@@ -20,7 +20,7 @@ form {
 		}
 	}
 	textarea {
-		background: $light-white;
+		background: #f0f0f0;
 		border: none;
 		border-radius: 10px;
 		min-height: 237px;
