--- a/_sass/3-layout/footer.scss
+++ b/_sass/3-layout/footer.scss
@@ -14,11 +14,11 @@
     align-items: center;
     max-width: 290px;
     margin: 0 auto 14px auto;
-    gap: 25px;
+    gap: 20px;
 
     .socials {
       display: flex;
-      margin-right: 25px;
+      margin-right: 5px;
 
       .u-mr {
         margin-right: 11px;
